--- a/shopping-project/src/components/Detail.module.css
+++ b/shopping-project/src/components/Detail.module.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
+    min-height: 75vh;
 }
 
 .descriptionContainer {
@@ -9,6 +10,7 @@
     flex-direction: column;
     width: 350px;
     justify-content: space-around;
+    margin-bottom: 75px;
 }
 
 
@@ -24,4 +26,5 @@ img {
     align-items: center;
     justify-content: center;
     padding: 10px;
+    margin-bottom: 45px;
 }
