add cart responsive layout

--- a/shopping-project/src/components/Cart/Cart.module.css
+++ b/shopping-project/src/components/Cart/Cart.module.css
@@ -100,3 +100,13 @@
   font-size: 1.2rem;
   color: #555;
 }
+
+@media (max-width: 768px) {
+    .cartContainer {
+        flex-direction: column;
+    }
+
+    .bag {
+        width: 90%;
+    }
+}
